added first content in the main

--- a/supporto/index.html
+++ b/supporto/index.html
@@ -19,7 +19,7 @@
     <header>
         <section class="top horizontal-alignment">
             <img src="./img/logo-small.png" alt="dropbox logo">
-            <section class="header-links horizontal-alignment">
+            <nav class="header-links horizontal-alignment">
                 <ul class="horizontal-alignment">
                     <li>
                         <a class="gray-color" href="">Centro assistenza</a>
@@ -38,10 +38,10 @@
                     <input type="search" placeholder="Cerca">
                     <i class="fa-solid fa-magnifying-glass"></i>
                 </section>
-            </section>
+            </nav>
         </section>
 
-        <section class="bottom horizontal-alignment">
+        <nav class="bottom horizontal-alignment">
             <ul class="horizontal-alignment">
                 <li>
                     <a href="">Centro assistenza</a>
@@ -59,17 +59,17 @@
                     <a href="">Inizia</a>
                 </li>
             </ul>
-        </section>
+        </nav>
     </header>
 
     <main>
-        <section> <!-- Top content del main -->
-            <div> <!-- Centro assistenza Dropbox -->
-                
+        <section class="horizontal-alignment first-info"> <!-- Top content del main -->
+            <div class="brown-back"> <!-- Centro assistenza Dropbox -->
+                <h1 class="white-color">Centro assistenza<br>Dropbox</h1>
             </div>
 
-            <div> <!-- Risposte alle domande -->
-
+            <div class="azure-back"> <!-- Risposte alle domande -->
+                <p>Scopri come usare Dropbox per trovare risposte alle domande pi&ugrave; comuni</p>
             </div>
         </section>
 
