added main search bar

--- a/supporto/index.html
+++ b/supporto/index.html
@@ -73,11 +73,15 @@
             </div>
         </section>
 
-        <section>
+        <section class="beige-back">
             <div class="container">
                 <!-- nav bar -->
+                <section class="search-bar">
+                    <input type="search" placeholder="Cerca articoli (es.reimpostare password, cambiare le informazioni di fatturazione, ecc.)" >
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                </section>
 
-                <section class="articles">
+                <section class="articles horizontal-alignment">
 
                 </section>
             </div>
