added the nav section in the main

--- a/supporto/index.html
+++ b/supporto/index.html
@@ -82,7 +82,99 @@
                 </section>
 
                 <section class="articles horizontal-alignment">
+                    <article>
+                        <div class="image-container">
+                            <img src="./img/utilizza.webp" alt="an hand taking a 2019 folder">
+                        </div>
+                        <h2>
+                            Utilizza Dropbox
+                        </h2>
 
+                        <hr>
+
+                        <ul>
+                            <li>
+                                <a href="">Crea e carica</a>
+                            </li>
+                            <li>
+                                <a href="">Eliminazione e ripristino</a>
+                            </li>
+                            <li>
+                                <a href="">Organizza</a>
+                            </li>
+                            <li>
+                                <a href="">Condividi</a>
+                            </li>
+                            <li>
+                                <a href="">Sincronizzazione</a>
+                            </li>
+                            <li>
+                                <a href="">Visualizza e modifica</a>
+                            </li>
+                        </ul>
+                    </article>
+                    <article>
+                        <div class="image-container">
+                            <img src="./img/ram.webp" alt="an hand using a pc">
+                        </div>
+                        <h2>
+                            Utilizza Dropbox
+                        </h2>
+
+                        <hr>
+
+                        <ul>
+                            <li>
+                                <a href="">Crea e carica</a>
+                            </li>
+                            <li>
+                                <a href="">Eliminazione e ripristino</a>
+                            </li>
+                            <li>
+                                <a href="">Organizza</a>
+                            </li>
+                            <li>
+                                <a href="">Condividi</a>
+                            </li>
+                            <li>
+                                <a href="">Sincronizzazione</a>
+                            </li>
+                            <li>
+                                <a href="">Visualizza e modifica</a>
+                            </li>
+                        </ul>
+                    </article>                    
+                    <article>
+                        <div class="image-container">
+                            <img src="./img/app.webp" alt="two hands creating a puzzle">
+                        </div>
+                        <h2>
+                            Utilizza Dropbox
+                        </h2>
+
+                        <hr>
+
+                        <ul>
+                            <li>
+                                <a href="">Crea e carica</a>
+                            </li>
+                            <li>
+                                <a href="">Eliminazione e ripristino</a>
+                            </li>
+                            <li>
+                                <a href="">Organizza</a>
+                            </li>
+                            <li>
+                                <a href="">Condividi</a>
+                            </li>
+                            <li>
+                                <a href="">Sincronizzazione</a>
+                            </li>
+                            <li>
+                                <a href="">Visualizza e modifica</a>
+                            </li>
+                        </ul>
+                    </article>
                 </section>
             </div>
         </section>
