--- a/supporto/index.html
+++ b/supporto/index.html
@@ -81,7 +81,7 @@
                     <i class="fa-solid fa-magnifying-glass"></i>
                 </section>
 
-                <section class="articles horizontal-alignment">
+                <nav class="articles horizontal-alignment">
                     <article>
                         <div class="image-container">
                             <img src="./img/utilizza.webp" alt="an hand taking a 2019 folder">
@@ -89,8 +89,6 @@
                         <h2>
                             Utilizza Dropbox
                         </h2>
-
-                        <hr>
 
                         <ul>
                             <li>
@@ -121,8 +119,6 @@
                             Utilizza Dropbox
                         </h2>
 
-                        <hr>
-
                         <ul>
                             <li>
                                 <a href="">Crea e carica</a>
@@ -152,8 +148,6 @@
                             Utilizza Dropbox
                         </h2>
 
-                        <hr>
-
                         <ul>
                             <li>
                                 <a href="">Crea e carica</a>
@@ -161,21 +155,9 @@
                             <li>
                                 <a href="">Eliminazione e ripristino</a>
                             </li>
-                            <li>
-                                <a href="">Organizza</a>
-                            </li>
-                            <li>
-                                <a href="">Condividi</a>
-                            </li>
-                            <li>
-                                <a href="">Sincronizzazione</a>
-                            </li>
-                            <li>
-                                <a href="">Visualizza e modifica</a>
-                            </li>
                         </ul>
                     </article>
-                </section>
+                </nav>
             </div>
         </section>
 
