added product section

--- a/supporto/index.html
+++ b/supporto/index.html
@@ -16,6 +16,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
+
+    <!-- pagina di riferimento -->
+    <!-- https://help.dropbox.com/it-it -->
+
     <header>
         <section class="top horizontal-alignment">
             <img src="./img/logo-small.png" alt="dropbox logo">
@@ -161,12 +165,50 @@
             </div>
         </section>
 
-        <section> <!-- Prodotti -->
-            <article></article>
-            <article></article>
-            <article></article>
-            <article></article>
-            <article></article>
+        <section class="container"> <!-- Prodotti -->
+            <h2>
+                Prodotti
+            </h2>
+            <p>
+                Scopri come usare i prodotti Dropbox e risolvere i relativi problemi
+            </p>
+            <section class="products">
+                <article>
+                    <div class="product.container">
+                        <img src="./img/transfer.svg" alt="transfer icon">
+                    </div>
+                    <h4>Dropbox Transfer</h4>
+                    <p>Scopri come consegnare file di grandi dimensioni a chiunque in sicurezza</p>
+                </article>
+                <article>
+                    <div class="product.container">
+                        <img src="./img/capture.svg" alt="capture icon">
+                    </div>
+                    <h4>Dropbox Capture</h4>
+                    <p>Scopri come acquisire registrazioni dello schermo e videomessaggi</p>
+                </article>
+                <article>
+                    <div class="product.container">
+                        <img src="./img/replay.svg" alt="replay icon">
+                    </div>
+                    <h4>Dropbox Replay</h4>
+                    <p>Scopri come rivedere video più velocemente con il tuo team</p>
+                </article>
+                <article>
+                    <div class="product.container">
+                        <img src="./img/passwords.svg" alt="passwords icon">
+                    </div>
+                    <h4>Dropbox Passwords</h4>
+                    <p>Scopri come sincronizzare e archiviare le tue password su più dispositivi</p>
+                </article>
+                <article>
+                    <div class="product.container">
+                        <img src="./img/backup.svg" alt="backup icon">
+                    </div>
+                    <h4>Dropbox Backup</h4>
+                    <p>Scopri come eseguire il backup automatico di tutti i tuoi dispositivi</p>
+                </article>
+            </section>
         </section>
 
         <section> <!-- Articoli piu letti -->
