finished most read article section

--- a/supporto/index.html
+++ b/supporto/index.html
@@ -20,6 +20,9 @@
     <!-- pagina di riferimento -->
     <!-- https://help.dropbox.com/it-it -->
 
+    <!-- todo AGGIUNGERE TUTTI I LINK, COMPRESE IMMAGINI DEI PRODOTTI -->
+    <!-- todo HOVER EFFECT E UNDERLINE -->
+
     <header>
         <section class="top horizontal-alignment">
             <img src="./img/logo-small.png" alt="dropbox logo">
@@ -211,8 +214,43 @@
             </section>
         </section>
 
-        <section> <!-- Articoli piu letti -->
-            
+        <section class="brown-back"> <!-- Articoli piu letti -->
+            <section class="container">  
+                <h2 class="white-color">Articoli pi&ugrave; letti</h2>
+                <section class="horizontal-alignment">
+                    <article>
+                        <h4 class="white-color">Reimpostazione della password</h4>
+                        <br> 
+                        <p class="white-color">Hai dimenticato la password? Scopri come reimpostare la password di Dropbox dalla pagina di accesso o dalle impostazioni dell'account.</p>
+                        <br>
+                        <br>
+                        <a href=""><strong class="white-color">Visualizza altro</strong></a>
+                    </article>
+                    <article>
+                        <h4 class="white-color">Aggiorna le tue informazioni di fatturazione</h4>
+
+                        <p class="white-color">Scopri come aggiornare le informazioni di fatturazione del tuo account Dropbox, ad esempio aggiungendo un nuovo numero di carta di credito, oppure modificando l’indirizzo o il ciclo di fatturazione.</p>
+
+                        <a href=""><strong class="white-color">Visualizza altro</strong></a>
+                    </article>
+                    <article>
+                        <h4 class="white-color">Come condividere file o cartelle in Dropbox</h4>
+
+                        <p class="white-color">Esistono vari modi per condividere file e cartelle nel tuo account Dropbox. In questa panoramica, puoi scoprire di più su come condividere contenuti in tempo reale con altre persone.</p>
+                        <br>
+                        <a href=""><strong class="white-color">Visualizza altro</strong></a>
+                    </article>
+                    <article>
+                        <h4 class="white-color">Come configurare Dropbox Backup</h4>
+
+                        <p class="white-color">Scopri come utilizzare Dropbox Backup per configurare e gestire backup di computer e dischi rigidi esterni. </p>
+                        <br>
+                        <br>
+                        <br>
+                        <a href=""><strong class="white-color">Visualizza altro</strong></a>
+                    </article>
+                </section>
+            </section>
         </section>
 
         <section> <!-- Ulteriori informazioni -->
