added info section

--- a/supporto/index.html
+++ b/supporto/index.html
@@ -253,8 +253,29 @@
             </section>
         </section>
 
-        <section> <!-- Ulteriori informazioni -->
-
+        <section class="beige-back"> <!-- Ulteriori informazioni -->
+            <section class="info-container container horizontal-alignment">
+                <article class="more-info">
+                    <img src="./img/Lightbulb.svg" alt="lampadina">
+                    <h3>Scopri</h3>
+                    <p>Ottieni il massimo da Dropbox con corsi autoguidati gratuiti e sessioni di formazione live con un istruttore.</p>
+                    <br>
+                    <a href=""><strong>Ulteriori informazioni</strong></a>
+                </article>
+                <article class="more-info">
+                    <img src="./img/Sprout.svg" alt="lampadina">
+                    <h3>Scopri</h3>
+                    <p>Scopri le opzioni di supporto a tua disposizione, invia una richiesta di assistenza o verifica lo stato di un ticket aperto.</p>
+                    <a href=""><strong>Ulteriori informazioni</strong></a>
+                </article>
+                <article class="more-info">
+                    <img src="./img/PersonMultiple.svg" alt="lampadina">
+                    <h3>Scopri</h3>
+                    <p>Collegati con altri clienti Dropbox per ottenere risposte e imparare le best practice.</p>
+                    <br>
+                    <a href=""><strong>Ulteriori informazioni</strong></a>
+                </article>
+            </section>
         </section>
     </main>
 
