--- a/supporto/index.html
+++ b/supporto/index.html
@@ -279,13 +279,200 @@
         </section>
     </main>
 
-    <footer>
-        <section> <!-- links -->
-
+    <footer class="black-back">
+        <section class="horizontal-alignment container"> <!-- links -->
+            <section>
+                <h3 class="white-color">Dropbox</h3>
+                <ul>
+                    <li>
+                        <a class="white-color" href="https://www.dropbox.com/desktop">Applicazione desktop</a>
+                    </li>
+                    <li>
+                        <a class="white-color" href="https://www.dropbox.com/mobile">App per dispositivi mobili</a>
+                    </li>
+                    <li>
+                        <a class="white-color" href="https://www.dropbox.com/app-integrations">Integrazioni</a>
+                    </li>
+                    <li>
+                        <a class="white-color" href="https://www.dropbox.com/features">Funzioni</a>
+                    </li>
+                    <li>
+                        <a class="white-color" href="https://www.dropbox.com/business/solutions">Soluzioni</a>
+                    </li>
+                    <li>
+                        <a class="white-color" href="https://www.dropbox.com/features/security">Sicurezza</a>
+                    </li>
+                    <li>
+                        <a class="white-color" href="https://www.dropbox.com/early-access">Accesso anticipato</a>
+                    </li>
+                    <li>
+                        <a class="white-color" href="https://www.dropbox.com/templates">Modelli</a>
+                    </li>
+                </ul>
+            </section>
+            <section>
+                <h3 class="white-color">Prodotti</h3>
+                <ul>
+                    <li>
+                        <a class="white-color" href="https://www.dropbox.com/desktop">Plus</a>
+                    </li>
+                    <li>
+                        <a class="white-color" href="https://www.dropbox.com/mobile">Professional</a>
+                    </li>
+                    <li>
+                        <a class="white-color" href="https://www.dropbox.com/app-integrations">Settore</a>
+                    </li>
+                    <li>
+                        <a class="white-color" href="https://www.dropbox.com/features">Enterprise</a>
+                    </li>
+                    <li>
+                        <a class="white-color" href="https://www.dropbox.com/business/solutions">Dash (beta)</a>
+                    </li>
+                    <li>
+                        <a class="white-color" href="https://www.dropbox.com/features/security">Dropbox Sign</a>
+                    </li>
+                    <li>
+                        <a class="white-color" href="https://www.dropbox.com/early-access">DocSend</a>
+                    </li>
+                    <li>
+                        <a class="white-color" href="https://www.dropbox.com/templates">Piani</a>
+                    </li>
+                    <li>
+                        <a class="white-color" href="https://www.dropbox.com/templates">Aggiornamento dei prodotti</a>
+                    </li>
+                </ul>
+            </section>
+            <section>
+                <h3 class="white-color">Funzioni</h3>
+                <ul>
+                    <li>
+                        <a class="white-color" href="https://www.dropbox.com/desktop">Invia file di grandi dimensioni</a>
+                    </li>
+                    <li>
+                        <a class="white-color" href="https://www.dropbox.com/mobile">Invia video lunghi</a>
+                    </li>
+                    <li>
+                        <a class="white-color" href="https://www.dropbox.com/app-integrations">Archiviazione di foto sul cloud</a>
+                    </li>
+                    <li>
+                        <a class="white-color" href="https://www.dropbox.com/features">Trasferimenti sicuri dei file</a>
+                    </li>
+                    <li>
+                        <a class="white-color" href="https://www.dropbox.com/business/solutions">Gestore delle password</a>
+                    </li>
+                    <li>
+                        <a class="white-color" href="https://www.dropbox.com/features/security">Backup su cloud</a>
+                    </li>
+                    <li>
+                        <a class="white-color" href="https://www.dropbox.com/early-access">Modificare PDF</a>
+                    </li>
+                    <li>
+                        <a class="white-color" href="https://www.dropbox.com/templates">Firme elettroniche</a>
+                    </li>
+                    <li>
+                        <a class="white-color" href="https://www.dropbox.com/templates">Registratore schermo</a>
+                    </li>
+                    <li>
+                        <a class="white-color" href="https://www.dropbox.com/templates">Trascrivere video</a>
+                    </li>
+                </ul>
+            </section>
+            <section>
+                <h3 class="white-color">Supporto</h3>
+                <ul>
+                    <li>
+                        <a class="white-color" href="https://www.dropbox.com/desktop">Centro assistenza</a>
+                    </li>
+                    <li>
+                        <a class="white-color" href="https://www.dropbox.com/mobile">Contattaci</a>
+                    </li>
+                    <li>
+                        <a class="white-color" href="https://www.dropbox.com/app-integrations">Privacy e Termini</a>
+                    </li>
+                    <li>
+                        <a class="white-color" href="https://www.dropbox.com/features">Norme sui cookie</a>
+                    </li>
+                    <li>
+                        <a class="white-color" href="https://www.dropbox.com/business/solutions">Preferenze cookie e CCPA</a>
+                    </li>
+                    <li>
+                        <a class="white-color" href="https://www.dropbox.com/features/security">Principi sull'intelligenza artificiale</a>
+                    </li>
+                    <li>
+                        <a class="white-color" href="https://www.dropbox.com/early-access">Mappa del sito</a>
+                    </li>
+                    <li>
+                        <a class="white-color" href="https://www.dropbox.com/templates">Risorse di formazione</a>
+                    </li>
+                </ul>
+            </section>
+            <section>
+                <h3 class="white-color">Risorse</h3>
+                <ul>
+                    <li>
+                        <a class="white-color" href="https://www.dropbox.com/desktop">Blog</a>
+                    </li>
+                    <li>
+                        <a class="white-color" href="https://www.dropbox.com/mobile">Storie di clienti</a>
+                    </li>
+                    <li>
+                        <a class="white-color" href="https://www.dropbox.com/app-integrations">Libreria delle risorse</a>
+                    </li>
+                    <li>
+                        <a class="white-color" href="https://www.dropbox.com/features">Developers</a>
+                    </li>
+                    <li>
+                        <a class="white-color" href="https://www.dropbox.com/business/solutions">Forum della community</a>
+                    </li>
+                    <li>
+                        <a class="white-color" href="https://www.dropbox.com/features/security">Referral</a>
+                    </li>
+                    <li>
+                        <a class="white-color" href="https://www.dropbox.com/early-access">Partner rivenditori</a>
+                    </li>
+                    <li>
+                        <a class="white-color" href="https://www.dropbox.com/templates">Developers</a>
+                    </li>
+                    <li>
+                        <a class="white-color" href="https://www.dropbox.com/templates">Partner per le integrazioni</a>
+                    </li>
+                    <li>
+                        <a class="white-color" href="https://www.dropbox.com/templates">Trova un partner</a>
+                    </li>
+                </ul>
+            </section>
+            <section>
+                <h3 class="white-color">Azienda</h3>
+                <ul>
+                    <li>
+                        <a class="white-color" href="https://www.dropbox.com/desktop">Chi siamo</a>
+                    </li>
+                    <li>
+                        <a class="white-color" href="https://www.dropbox.com/mobile">Jobs</a>
+                    </li>
+                    <li>
+                        <a class="white-color" href="https://www.dropbox.com/app-integrations">Relazioni con gli investitori</a>
+                    </li>
+                    <li>
+                        <a class="white-color" href="https://www.dropbox.com/features">ESG</a>
+                    </li>
+                </ul>
+            </section>
         </section>
 
-        <section> <!-- social e lingua -->
+        <section class="container"> <!-- social e lingua -->
+            <section class="social horizontal-alignment">
+                <i class="white-color fa-brands fa-x-twitter"></i>
+                <i class="white-color fa-brands fa-facebook"></i>
+                <i class="white-color fa-brands fa-youtube"></i>
+            </section>
 
+            <hr>
+
+            <section class="language horizontal-alignment">
+                <p class="white-color">Italiano</p>
+                <i class="white-color fa-solid fa-angle-down"></i>
+            </section>
         </section>
     </footer>
 </body>
