--- a/supporto/index.html
+++ b/supporto/index.html
@@ -55,12 +55,78 @@
                 </li>
                 <li>
                     <a href="">Utilizza Dropbox</a>
+                    <div class="drop-down beige-back">
+                        <ul>
+                            <li>
+                                <a href="">Crea e carica</a>
+                            </li>
+                            <li>
+                                <a href="">Eliminazione e ripristino</a>
+                            </li>
+                            <li>
+                                <a href="">Organizza</a>
+                            </li>
+                            <li>
+                                <a href="">Condividi</a>
+                            </li>
+                            <li>
+                                <a href="">Sincronizzazione</a>
+                            </li>
+                            <li>
+                                <a href="">Visualizza e modifica</a>
+                            </li>
+                        </ul>
+                    </div>
                 </li>
                 <li>
                     <a href="">Account</a>
+                    <div class="drop-down beige-back">
+                        <ul>
+                            <li>
+                                <a href="">Crea e carica</a>
+                            </li>
+                            <li>
+                                <a href="">Eliminazione e ripristino</a>
+                            </li>
+                            <li>
+                                <a href="">Organizza</a>
+                            </li>
+                            <li>
+                                <a href="">Condividi</a>
+                            </li>
+                            <li>
+                                <a href="">Sincronizzazione</a>
+                            </li>
+                            <li>
+                                <a href="">Visualizza e modifica</a>
+                            </li>
+                        </ul>
+                    </div>
                 </li>
                 <li>
                     <a href="">Prodotti</a>
+                    <div class="drop-down beige-back">
+                        <ul>
+                            <li>
+                                <a href="">Crea e carica</a>
+                            </li>
+                            <li>
+                                <a href="">Eliminazione e ripristino</a>
+                            </li>
+                            <li>
+                                <a href="">Organizza</a>
+                            </li>
+                            <li>
+                                <a href="">Condividi</a>
+                            </li>
+                            <li>
+                                <a href="">Sincronizzazione</a>
+                            </li>
+                            <li>
+                                <a href="">Visualizza e modifica</a>
+                            </li>
+                        </ul>
+                    </div>
                 </li>
                 <li>
                     <a href="">Inizia</a>
