--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                             <a class="gray-color" href="#funzioni">Funzioni</a>
                         </li>
                         <li>
-                            <a class="gray-color" href="#1">Piani e Prezzi</a>
+                            <a class="gray-color" href="#prices">Piani e Prezzi</a>
                         </li>
                     </ul>
                 </nav>
@@ -84,7 +84,7 @@
         </section>
     </header>
 
-    <main id="1">
+    <main id="prices">
         <section class="fatturazione maxi-limited" >
             <h2>
                 Trova il piano business che fa per te
