added link to the bonus page in the main page

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <nav class="horizontal-alignment">
                     <ul class="horizontal-alignment">
                         <li class="gray-color">
-                            <a class="gray-color" href="https://help.dropbox.com/it-it/">Supporto</a>
+                            <a class="gray-color" href="/supporto/index.html">Supporto</a>
                         </li>
                         <li>
                             <a class="gray-color" href="https://experience.dropbox.com/contact">Contatta l'ufficio vendite</a>
@@ -74,7 +74,7 @@
                                 Annulla in qualsiasi momento
                             </p>
 
-                            <a href="#1"><i class="fa-solid fa-arrow-down"></i></a>
+                            <a href="#prices"><i class="fa-solid fa-arrow-down"></i></a>
                         </section>
 
                         <img src="./img/jumbo.png" alt="">
