added opacity effect to dropdown in support page

--- a/supporto/index.html
+++ b/supporto/index.html
@@ -55,6 +55,7 @@
                 </li>
                 <li>
                     <a href="">Utilizza Dropbox</a>
+                    <div class="opacity"></div>
                     <div class="drop-down beige-back">
                         <ul>
                             <li>
@@ -80,6 +81,7 @@
                 </li>
                 <li>
                     <a href="">Account</a>
+                    <div class="opacity"></div>
                     <div class="drop-down beige-back">
                         <ul>
                             <li>
@@ -105,6 +107,7 @@
                 </li>
                 <li>
                     <a href="">Prodotti</a>
+                    <div class="opacity"></div>
                     <div class="drop-down beige-back">
                         <ul>
                             <li>
